--- a/main.css
+++ b/main.css
@@ -7,6 +7,9 @@ body {
   width: 80%;
   line-height: 1.5;
   align-content: center;
+  background-image: url(images/lighthouse-145556_1280.png);
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 h1 {
