--- a/main.css
+++ b/main.css
@@ -4,27 +4,46 @@
 
 header {
   height: 50vh;
-  background-color: cyan;
+
+  background-color: rgba(21, 151, 226, 0.774);
   background-position: right bottom 20%;
   background-image: url(images/lighthouse-145556_1280.png);
   background-size: contain;
   background-repeat: no-repeat;
+  width: 100%;
+  box-shadow: 12px 12px 10px 10px rgba(0, 0, 55, 0.2);
+}
+
+#main {
+  margin-left: 15%;
+  margin-right: 15%;
+  width: 80%;
 }
 
 body {
+  background-color: rgb(21, 32, 43);
+  color: aliceblue;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   /*color: rgb(8, 168, 168);*/
   margin: 0 auto;
-  width: 80%;
+
   line-height: 1.5;
-  align-content: center;
+  align-items: center;
+}
+
+p {
+  text-align: center;
+  padding-bottom: 16px;
 }
 ul {
-  border: 2px solid black;
-  border-radius: 4px;
+  /*border: 2px solid black;*/
+  background-color: rgba(21, 151, 226, 0.774);
+  border-radius: 15px;
+  width: 80%;
   max-width: 300px;
   line-height: 2.5;
+  box-shadow: 12px 12px 10px 10px rgba(0, 0, 55, 0.2);
 }
 
 #current-weather {
@@ -32,14 +51,31 @@ ul {
 }
 
 h1 {
-  font-size: 40px;
+  margin-top: auto;
+  font-size: 34px;
   font-weight: 100;
+  padding-left: 4%;
 }
 
 h2 {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 li {
   list-style: none;
+}
+
+#user-time {
+  background-color: black;
+  color: aliceblue;
+}
+
+#selection,
+#reset {
+  font-size: 12px;
+  margin-left: 6px;
+  color: aliceblue;
+  background-color: rgba(21, 151, 226, 0.774);
+  border-radius: 4px;
+  border: none;
 }
