--- a/main.css
+++ b/main.css
@@ -77,6 +77,19 @@ li {
   margin-left: 6px;
   color: aliceblue;
   background-color: rgba(21, 151, 226, 0.774);
-  border-radius: 4px;
+  border-radius: 8px;
   border: none;
+}
+
+@media screen and (min-width: 660px) {
+  header {
+    height: 60vh;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+  p {
+    font-size: 20px;
+  }
 }
