--- a/main.css
+++ b/main.css
@@ -37,6 +37,11 @@ p {
   padding-bottom: 16px;
 }
 
+.blurb,
+h2 {
+  text-align: center;
+}
+
 ul {
   border: 2px solid white;
   background-color: rgba(21, 151, 226, 0.774);
