--- a/main.css
+++ b/main.css
@@ -51,6 +51,12 @@ ul {
   line-height: 2.5;
   box-shadow: 12px 12px 10px 10px rgba(0, 0, 55, 0.2);
   padding-bottom: 30px;
+  margin: auto;
+}
+
+#selected-weather-results {
+  display: none;
+  margin-top: 3em;
 }
 
 #current-weather {
@@ -62,6 +68,10 @@ h1 {
   font-size: 34px;
   font-weight: 100;
   padding-left: 4%;
+}
+
+li h2 {
+  margin-left: -30px;
 }
 
 h2 {
