--- a/main.css
+++ b/main.css
@@ -103,6 +103,10 @@ footer {
   margin-top: 20vh;
 }
 
+.error-message {
+  color: rgba(255, 0, 0, 0.842);
+}
+
 @media screen and (min-width: 660px) {
   header {
     height: 60vh;
